--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint"
-    
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -49,6 +49,7 @@
     "dotenv": "latest",
     "embla-carousel-react": "8.5.1",
     "express": "latest",
+    "framer-motion": "^12.6.3",
     "input-otp": "1.4.1",
     "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
